@@ -20,5 +20,8 @@ libraryDependencies += "com.typesafe.akka" % "akka-http-spray-json-experimental_
 
 libraryDependencies += "org.scalanlp" % "nak" % "1.2.1"
 
+fork in run := true
+javaOptions ++= Seq("-Xms256M", "-Xmx2G", "-XX:+UseConcMarkSweepGC")
+
 
 
